XIVY-12602 Fix scrolling
Fix that the integrated inscription view

- Always shows a scrollbar
- Opens the browser full screen

--- a/packages/inscription/css/inscription-ui.css
+++ b/packages/inscription/css/inscription-ui.css
@@ -2,6 +2,10 @@
   position: relative;
   right: 0;
   z-index: 1000;
+  height: 100%;
+}
+.inscription-ui-container > div {
+  height: 100%;
 }
 .inscription-ui-container .inscription-resizer {
   border-left: 1px solid var(--glsp-tool-border);
